init simple jdbc connector

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,9 @@ quarkus.swagger-ui.theme=material
 quarkus.swagger-ui.display-request-duration=true
 quarkus.swagger-ui.operations-sorter=method
 quarkus.swagger-ui.show-common-extensions=true
+#==============================================
+#= SECRETS ====================================
+#++++++++++++++++++++++++++++++++++++++++++++++
+database.url=jdbc:mysql://localhost:3306/fresh_planner_db_dev
+database.user=root
+database.password=password
