fix utility classes and add documentation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ quarkus.swagger-ui.show-common-extensions=true
 #==============================================
 #= SECRETS ====================================
 #++++++++++++++++++++++++++++++++++++++++++++++
-database.url=jdbc:mysql://localhost:3306/fresh_planner_db_dev
+%dev.database.url=jdbc:mysql://localhost:3306/fresh_planner_db_dev
+%prod.database.url=jdbc:mysql://host.docker.internal:3306/fresh_planner_db_prod
 database.user=root
 database.password=password
