--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 # = SERVER ====================================
 #++++++++++++++++++++++++++++++++++++++++++++++
 quarkus.http.port=8088
+quarkus.http.cors=false
 #==============================================
 #= LOGGING ====================================
 #++++++++++++++++++++++++++++++++++++++++++++++
@@ -10,6 +11,7 @@ quarkus.http.port=8088
 #= DEVELOPMENT ================================
 #++++++++++++++++++++++++++++++++++++++++++++++
 quarkus.live-reload.instrumentation=true
+quarkus.native.resources.includes=sql-statements/**
 #==============================================
 #= SWAGGER ====================================
 #++++++++++++++++++++++++++++++++++++++++++++++
@@ -24,7 +26,7 @@ quarkus.swagger-ui.show-common-extensions=true
 #==============================================
 #= SECRETS ====================================
 #++++++++++++++++++++++++++++++++++++++++++++++
-%dev.database.url=jdbc:mysql://localhost:3306/fresh_planner_db_dev
+database.url=jdbc:mysql://localhost:3306/fresh_planner_db_dev
 %prod.database.url=jdbc:mysql://host.docker.internal:3306/fresh_planner_db_prod
 database.user=root
 database.password=password
