--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # = SERVER ====================================
 #++++++++++++++++++++++++++++++++++++++++++++++
 quarkus.http.port=8088
-quarkus.http.cors=false
+quarkus.http.cors=true
 #==============================================
 #= LOGGING ====================================
 #++++++++++++++++++++++++++++++++++++++++++++++
