--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,6 @@ quarkus.http.cors=true
 #==============================================
 #= LOGGING ====================================
 #++++++++++++++++++++++++++++++++++++++++++++++
-
 #==============================================
 #= DEVELOPMENT ================================
 #++++++++++++++++++++++++++++++++++++++++++++++
@@ -26,7 +25,8 @@ quarkus.swagger-ui.show-common-extensions=true
 #==============================================
 #= SECRETS ====================================
 #++++++++++++++++++++++++++++++++++++++++++++++
-database.url=jdbc:mysql://localhost:3306/fresh_planner_db_dev
-%prod.database.url=jdbc:mysql://host.docker.internal:3306/fresh_planner_db_prod
+database.url=jdbc:mysql://localhost:3306/fresh_planner_db_dev?createDatabaseIfNotExist=true
+%test.database.url=jdbc:mysql://localhost:3306/fresh_planner_db_test?createDatabaseIfNotExist=true
+%prod.database.url=jdbc:mysql://host.docker.internal:3306/fresh_planner_db_prod?createDatabaseIfNotExist=true
 database.user=root
 database.password=password
