--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -11,6 +11,8 @@ RUN chmod +x mvnw
 RUN ./mvnw -B org.apache.maven.plugins:maven-dependency-plugin:3.1.2:go-offline
 COPY src /code/src
 RUN ./mvnw package -Pnative
+RUN echo "======== NATIVE TESTS ========"
+RUN ./mvnw verify -Pnative
 
 FROM quay.io/quarkus/quarkus-micro-image:1.0 AS runner
 
