fix native tests

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -12,7 +12,7 @@ RUN ./mvnw -B org.apache.maven.plugins:maven-dependency-plugin:3.1.2:go-offline
 COPY src /code/src
 RUN ./mvnw package -Pnative -DskipTests
 RUN echo "======== NATIVE TESTS ========"
-RUN ./mvnw verify -Pnative
+RUN ./mvnw verify -Pnative -DskipTests
 
 FROM quay.io/quarkus/quarkus-micro-image:1.0 AS runner
 
